MDEV-18694 : Do not  call close_connection() on active connections in server shutdown code.

Fix fixes a race condition, if an active connection either writes ,
or will be writing to the socket after it is closed.

Previous call to socket shutdown() is fully enough to wake up and idle
connection, so that close_connection is obsolete and dangerous.