sql/mysqld.cc
@@ -1572,55 +1572,13 @@ static my_bool kill_all_threads(THD *thd, void *)
 }
 
 
-static my_bool kill_all_threads_once_again(THD *thd, void *)
+static my_bool warn_threads_still_active(THD *thd, void *)
 {
-#ifndef __bsdi__				// Bug in BSDI kernel
   if (thd->vio_ok())
-  {
-    if (global_system_variables.log_warnings)
-      sql_print_warning(ER_DEFAULT(ER_FORCING_CLOSE), my_progname,
-                        (ulong) thd->thread_id,
-                        (thd->main_security_ctx.user ?
-                         thd->main_security_ctx.user : ""));
-    /*
-      close_connection() might need a valid current_thd
-      for memory allocation tracking.
-    */
-    THD *save_thd= current_thd;
-    set_current_thd(thd);
-    close_connection(thd);
-    set_current_thd(save_thd);
-  }
-#endif
-
-#ifdef WITH_WSREP
-  /*
-   * WSREP_TODO:
-   *       this code block may turn out redundant. wsrep->disconnect()
-   *       should terminate slave threads gracefully, and we don't need
-   *       to signal them here.
-   *       The code here makes sure mysqld will not hang during shutdown
-   *       even if wsrep provider has problems in shutting down.
-   */
-  if (WSREP(thd) && wsrep_thd_is_applying(thd))
-  {
-    sql_print_information("closing wsrep system thread");
-    thd->set_killed(KILL_CONNECTION);
-    MYSQL_CALLBACK(thread_scheduler, post_kill_notification, (thd));
-    if (thd->mysys_var)
-    {
-      thd->mysys_var->abort=1;
-      mysql_mutex_lock(&thd->mysys_var->mutex);
-      if (thd->mysys_var->current_cond)
-      {
-        mysql_mutex_lock(thd->mysys_var->current_mutex);
-        mysql_cond_broadcast(thd->mysys_var->current_cond);
-        mysql_mutex_unlock(thd->mysys_var->current_mutex);
-      }
-      mysql_mutex_unlock(&thd->mysys_var->mutex);
-    }
-  }
-#endif
+    sql_print_warning("%s: Thread %llu (user : '%s') did not exit\n", my_progname,
+                      (ulonglong) thd->thread_id,
+                      (thd->main_security_ctx.user ?
+                     thd->main_security_ctx.user : ""));
   return 0;
 }
 
@@ -1774,12 +1732,8 @@ static void close_connections(void)
   for (int i= 0; thread_count && i < 1000; i++)
     my_sleep(20000);
 
-  /*
-    Force remaining threads to die by closing the connection to the client
-    This will ensure that threads that are waiting for a command from the
-    client on a blocking read call are aborted.
-  */
-  server_threads.iterate(kill_all_threads_once_again);
+  if (global_system_variables.log_warnings)
+    server_threads.iterate(warn_threads_still_active);
 
   end_slave();
 #ifdef WITH_WSREP
